# RoboticsII-Jetbot

./: .gitignore  README.md  pyproject.toml  test.ipynb
src/: PUTDriver.py  bot_driving.py  config.yml  dataloader.py  keyboard_driving.py  processing.py  training.py  user_driving.py
src/driving/: __init__.py  ai.py  controller.py  keyboard.py  main.py  put_jetbot.py  recorder.py  xbox.py
src/training/: data.py  dataloading_utils.py  loss.py  main.py  models.py  net.py  train.py  training.py  transforms.py
