[tool.poetry]
name = "roboticsii-jetbot"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [
  { include = "src" }
]

[tool.poetry.dependencies]
python = "^3.9"
torch = {version = "^2.3.0+cpu", source = "pytorch_cpu"}
torchvision = {version = "^0.18.0+cpu", source = "pytorch_cpu"}
opencv-python = "^4.9.0.80"
scikit-learn = "^1.4.2"
pandas = "^2.2.2"
torchsummary = "^1.5.1"
tqdm = "^4.66.4"


[[tool.poetry.source]]
name = "pytorch_cpu"
url = "https://download.pytorch.org/whl/cpu"
priority = "explicit"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
