[tool.poetry]
name = "roboticsii-jetbot"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [
  { include = "src" }
]

[tool.poetry.dependencies]
python = "^3.9"
opencv-python = "^4.9.0.80"
pandas = "^2.2.2"
torchsummary = "^1.5.1"
tqdm = "^4.66.4"
sshkeyboard = "^2.3.1"
inputs = "^0.5"
pyyaml = "^6.0.1"
onnxruntime = "^1.18.0"
torch = "^2.3.0"
torchvision = "^0.18.0"
onnx = "^1.16.1"
torchmetrics = "^1.4.0.post0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
